--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 <li>
                     <a href="">Imagenes</a>
                 </li>
-                <li>
-                    <a href="">Icon</a>
+                <li class="menu-icon">
+                    <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Avatar</a>
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADGmqu8OV2UDOolvKn3Go6fezIQcB1xA4M-BWIBbdx7ba0Q=s32-c-mo" alt="Avatar">
+                    </a>
                 </li>
             </ul>
         </nav>
