modificando input y logo

--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="main-logo">
+            <img src="https://openthread.google.cn/images/ot-contrib-google.png" alt="logo-google">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+            </div>
+        </section>
+        <section class="main-bottons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
