--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="micro-icon" href=""></a>
             </div>
         </section>
-        <section class="main-bottons">
+        <section class="main-buttons">
             <div>
                 <button>Buscar con Google</button>
             </div>
